Modified CircleLayout.as to include parameter 'arcAngle'.  Defaults to 360, but is settable.  The items are then spread out evenly across this angle.  For example, if there were 3 items with an arcAngle of 180, the items would be placed at 0, 90, and 180 degrees.  There is a special case when we the arcAngle is 360 (which is the default), in that the first and last elements would overlap, but we prevent this from happening.  Modified the CircleLayoutSample.mxml to include a slider for arcAngle.

--- a/samples/CircleLayoutSample/src/CircleLayoutSample.mxml
+++ b/samples/CircleLayoutSample/src/CircleLayoutSample.mxml
@@ -46,7 +46,8 @@
 				</fx:Component>
 			</s:itemRenderer>
 			<s:layout>
-				<layouts:CircleLayout rotation="{rotSlider.value}" rotateElements="{rotateElements.selected}" />
+				<layouts:CircleLayout rotation="{rotSlider.value}" rotateElements="{rotateElements.selected}" 
+          arcAngle="{arcAngleSlider.value}" />
 			</s:layout>
 		</s:DataGroup>
 	</s:Group>
@@ -99,9 +100,11 @@
 					
 					<s:VGroup gap="8" paddingTop="5">
 						<s:HGroup gap="16" width="100%" verticalAlign="middle">
-							<components:LabeledSlider id="rotSlider" label="rotation" sliderWidth="145"
+							<components:LabeledSlider id="rotSlider" label="rotation" sliderWidth="100"
 													  minimum="-360" maximum="360" step="5" value="-60" />
 							<components:LabeledCheck id="rotateElements" label="rotateElements" selected="false" />
+              <components:LabeledSlider id="arcAngleSlider" label="arcAngle" sliderWidth="100"
+													  minimum="-360" maximum="360" step="5" value="360" />
 						</s:HGroup>
 					</s:VGroup>
 				</s:HGroup>
